[package]
name = "ergot-client-tcp"
version = "0.1.0"
edition = "2024"

[dependencies]
cordyceps       = { workspace = true }
env_logger      = { workspace = true }
log             = { workspace = true }
ergot           = { workspace = true }
mutex           = { workspace = true }
tokio           = { workspace = true }
