[package]
name = "ergot-rtt-host"
version = "0.1.0"
edition = "2024"
description = "Host-side ergot router using RTT transport via probe-rs"

[dependencies]
# Ergot with tokio support
ergot = { workspace = true, features = ["defmtlog"] }

# probe-rs for RTT communication with embedded devices
probe-rs = "0.28"

# Async runtime & utils
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
bytes = "1"
futures = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
env_logger = { workspace = true }
log = { workspace = true }

# defmt decoding
defmt-decoder = "1.0"

# Error handling
anyhow = "1"
