[package]
name = "nucleoh723zg-net-udp-pair"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt.workspace = true
cortex-m.workspace = true
defmt-rtt.workspace = true
defmt.workspace = true
embassy-executor.workspace = true
embassy-stm32.workspace = true
embassy-time.workspace = true
embassy-net.workspace = true
embassy-futures.workspace = true
embedded-hal.workspace = true
ergot.workspace = true
heapless.workspace = true
mutex.workspace = true
panic-probe.workspace = true
postcard-schema.workspace = true
serde.workspace = true
static_cell.workspace = true
bbq2.workspace = true
log = "0.4.27"
embedded-alloc.workspace = true
